about section update

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -3,7 +3,7 @@
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(https://i.ibb.co/VqhLRnY/irfan-bot.png) no-repeat;
+    background: url(https://i.ibb.co/wNxm9jD/boot-2.png) no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
