--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -1,9 +1,9 @@
-.about{
+/* .about{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
-}
+} */
 .about-img img{
     padding-bottom: 20%;
     max-width: 630px;
@@ -13,18 +13,19 @@
     border-radius: 8px;
     
 }
-.about-text h2{
+.aboutme-title{
     font-size: 60px;
+    
 }
-.about-text h2 span{
+.aboutme-title span{
     color: #0ef;
 }
 .about-text h4{
     font-size: 29px;
     font-weight: 600;
     color: #fff;
-    line-height: 1.7;
-    margin: 15px 0 30px;
+    /* line-height: 1.7; */
+    /* margin: 15px 0 30px; */
 }
 .about-text p{
     color: aliceblue;
