--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 10%;
+  /* padding: 20px 10%; */
+  
   background: #051129;
   display: flex;
   justify-content: space-between;
@@ -17,8 +18,8 @@
   text-decoration: none;
   font-weight: 600;
   cursor: default;
-  /* opacity: 0; */
-  animation: slideRight 1s ease forwards;
+  
+ 
 }
 .navbar a {
   display: inline-block;
@@ -28,10 +29,8 @@
   font-weight: 500;
   margin-left: 35px;
   transition: .3s;
-  /* opacity: 0; */
   justify-content: end;
-  animation: slideTop .5s ease forwards;
-  animation-delay: calc(.2s * var(--i));
+  
 }
 .navbar a:hover {
   color: #0ef;
