--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,25 +1,21 @@
-.header{
+/* .header{
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  /* padding: 20px 10%; */
+ 
   
   background: #051129;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-}
-.logo{
-  position: relative;
+} */
+.logo {
   font-size: 25px;
   color: #fff;
   text-decoration: none;
-  font-weight: 600;
-  cursor: default;
-  
- 
+  font-weight: 700;
 }
 .navbar a {
   display: inline-block;
@@ -28,9 +24,8 @@
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
-  transition: .3s;
+  transition: 0.3s;
   justify-content: end;
-  
 }
 .navbar a:hover {
   color: #0ef;
